@@ -1579,6 +1579,23 @@ class CallasDonnerhackeFinneyShawThayerRFC4880
 			 const std::string								&policy,
 			 const tmcg_openpgp_octets_t					&issuer,
 			 tmcg_openpgp_octets_t							&out);
+		static void PacketSigPrepareTimestampSignature
+			(const tmcg_openpgp_hashalgo_t					hashalgo,
+			 const time_t									sigtime,
+			 const tmcg_openpgp_octets_t					&issuer,
+			 const tmcg_openpgp_pkalgo_t					target_pkalgo,
+			 const tmcg_openpgp_hashalgo_t					target_hashalgo,
+			 const tmcg_openpgp_octets_t					&target_hash,
+			 tmcg_openpgp_octets_t							&out);
+		static void PacketSigPrepareTimestampSignature
+			(const tmcg_openpgp_pkalgo_t					pkalgo,
+			 const tmcg_openpgp_hashalgo_t					hashalgo,
+			 const time_t									sigtime,
+			 const tmcg_openpgp_octets_t					&issuer,
+			 const tmcg_openpgp_pkalgo_t					target_pkalgo,
+			 const tmcg_openpgp_hashalgo_t					target_hashalgo,
+			 const tmcg_openpgp_octets_t					&target_hash,
+			 tmcg_openpgp_octets_t							&out);
 		static void PacketPubEncode
 			(const time_t									keytime,
 			 const tmcg_openpgp_pkalgo_t					algo,
